third_party/rust/chromium_crates_io/vendor/zerocopy-0.8.23/tests/ui-nightly/transmute-ref-dst-not-frombytes.stderr
error[E0277]: the trait bound `Dst: zerocopy::FromBytes` is not satisfied
  --> tests/ui-nightly/transmute-ref-dst-not-frombytes.rs:23:34
   |
23 | const DST_NOT_FROM_BYTES: &Dst = transmute_ref!(&AU16(0));
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^
   |                                  |
   |                                  the trait `zerocopy::FromBytes` is not implemented for `Dst`
   |                                  required by a bound introduced by this call
   |
   = note: Consider adding `#[derive(FromBytes)]` to `Dst`
   = help: the following other types implement trait `zerocopy::FromBytes`:
             ()
             AU16
             AtomicI16
             AtomicI32
             AtomicI64
             AtomicI8
             AtomicIsize
             AtomicU16
           and $N others
note: required by a bound in `AssertDstIsFromBytes`
  --> tests/ui-nightly/transmute-ref-dst-not-frombytes.rs:23:34
   |
23 | const DST_NOT_FROM_BYTES: &Dst = transmute_ref!(&AU16(0));
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertDstIsFromBytes`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)
